<resources>
    <string name="app_name">Growthy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Diskusi</string>
    <string name="title_notifications">Langganan</string>
    <string name="title_profiles">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Cari tanaman hias</string>
    <string name="camera_search">Cari dengan Foto</string>
    <string name="txt_judul_tradisional">Nama tradisional : </string>
    <string name="txt_nama_tradisional">Kaktus Rambut Nenek</string>
    <string name="txt_judul_latin">Nama latin : </string>
    <string name="txt_nama_latin">Mammillaria hahniana</string>
    <string name="txt_judul_keluarga">Keluarga  : </string>
    <string name="txt_nama_keluarga">Cactaceae</string>
    <string name="txt_plant_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien diam, pulvinar ac ex ut,</string>
    <string name="txt_judul_harga">Harga rata - rata di pasaran </string>
    <string name="txt_harga">Rp200.000 per tanaman</string>
    <string name="txt_judul_kesulitan">Tingkat kesulitan dalam merawat</string>
    <string name="txt_kesulitan">Mudah</string>
    <string name="txt_judul_pil_bibit">Cara memilih bibit dan tanaman yang bagus</string>
    <string name="txt_pilih_bibit">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien diam, pulvinar ac ex ut</string>
    <string name="txt_judul_cara_tanam">Cara Menanam</string>
    <string name="txt_judul_lokasi">Lokasi Optimal</string>
    <string name="txt_judul_penyakit_sering">Penyakit yang sering menjangkit</string>
    <string name="txt_judul_tindak_pencegahan">Tindakan pencegahan penyakit</string>
    <string name="txt_judul_up_foto">Ambil foto atau pilih gambar dari galeri</string>
    <string name="txt_diagnosa">Diagnosa</string>
    <string name="txt_detail_diagnosa">Lorem Ipsum is simply dummy text of the printing and typesetting industry. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="btn_penyembuhan">Penyembuhan</string>
    <string name="btn_kembali">Kembali</string>
    <string name="txt_penyakit">Penyakit Layu Fusarium</string>
    <string name="txt_detail_penyakit">Lorem Ipsum is simply dummy text of the printing and typesetting industry. It was popularised in the 1960s with the release of Letras</string>
    <string name="text_loading">Kami sedang memproses gambar tanaman Anda</string>
    <string name="text_funfact">"Fun fact disini "</string>
    <string name="txt_hasilprediksi">Silahkan periksa apakah nama penyakit ini sesuai dengan kerusakan pada tanaman Anda</string>
    <string name="txt_nama_penyakit">Bintik Hitam (Blank Spot)</string>
    <string name="txt_ringkasan_penyakit">- Bintik-bintik kecil disisi atas daun yang dikelilingi oleh lingkaran kuning.\n- Gugurnya daun sebelum waktunya.</string>
    <string name="txt_nama_ilmiah">Nama ilmiah: Diplocarpon rosae</string>
    <string name="txt_jdl_info_umum">Informasi Umum</string>
    <string name="txt_isi_info_umum">Diplocarpon rosae adalah jamur yang menyebabkan penyakit bercak hitam mawar. Tahap aseksual sekarang dikenal sebagai Marssonina rosae , sedangkan tahap seksual dan paling umum dikenal sebagai Diplocarpon rosae.</string>
    <string name="txt_jdl_info_gejala">Informasi Gejala</string>
    <string name="txt_isi_info_gejala">"Gejalanya berupa bintik-bintik kecil disisi atas daun. Bercak keunguan atau hitam ini dapat membesar dengan cepat dari 2 hingga 12 mm dan menunjukkan batas yang menyebar. Area daun disekitarnya dapat menguning dan gugur sebelum waktunya. "</string>
    <string name="txt_jdl_penyebab">Penyebab</string>
    <string name="txt_isi_penyebab">Bintik hitam pada bunga mawar disebabkan oleh jamur Diplocarpon rosae. Jamur cenderung bertahan melewati musim dingin pada daun dan batang yang jatuh dan membusuk.</string>
    <string name="txt_jdl_pencegahan">Tindakan Pencegahan</string>
    <string name="txt_isi_pencegahan">Taktik terbaik untuk mencegah bercak hitam adalah menanam mawar di tempat tumbuh yang bagus untuk tanaman, tetapi tidak untuk jamur.</string>
    <string name="txt_jdl_pengobatan">Cara Pengobatan</string>
    <string name="txt_isi_pengobatan">berikut cara pengobatan</string>
    <string name="txt_jdl_penemuan">Dapat ditemukan pada tanaman</string>
    <string name="txt_isi_penemuan">Mawar</string>
    <string name="txtMini1">Tips Pengambilan Foto</string>
    <string name="txtMini2">Tips Pengambilan Foto</string>
    <string name="txtMini3">Tips Pengambilan Foto</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>

    <!--    Resource string for register page-->
    <string name="input_email">Masukan alamat email anda</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="input_password">Masukan password anda</string>
    <string name="hint_password">Minimal 8 karakter</string>
    <string name="hint_password_login">Masukan password kamu</string>
    <string name="input_name">Masukan nama anda</string>
    <string name="hint_neme">Masukan nama anda</string>
    <string name="txt_daftar">Daftar</string>
    <string name="text_login">Masuk</string>
    <string name="atau">Atau</string>
    <string name="daftar_google">Daftar Dengan Google</string>
    <string name="sudah_punya_akun">Anda sudah punya Akun? </string>
    <string name="belum_punya_akun">Anda belum punya Akun? </string>
    <string name="search_hint2">Cari Data Penyakit</string>


    <string-array name="data_nama_tradisional">
        <item>Gray Mold</item>
        <item>Powdery Mildew</item>
        <item>Leaf Scars</item>
        <item>Downy Mildew</item>
        <item>Black Spot</item>
        <item>Rust </item>
    </string-array>

    <string-array name="data_nama_local">
        <item> Botrytis Cinerea</item>
        <item>Sphaerotheca pannosa</item>
        <item>Leaf Scars</item>
        <item>Peronosclerospora spp</item>
        <item>Diplocarpon rosae</item>
        <item>Puccinia triticina </item>
    </string-array>

    <string-array name="data_photo">
        <item>@drawable/graymold</item>
        <item>@drawable/powdery</item>
        <item>@drawable/leafscars</item>
        <item>@drawable/embunbulu1</item>
        <item>@drawable/blackspot2</item>
        <item>@drawable/rust</item>
    </string-array>
</resources>