<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textColor="#444"
            android:gravity="start"
            android:textSize="14dp"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/input_email"/>

        <com.yyogadev.growthyapplication.customview.EmailEditText
            android:id="@+id/edt_email"
            android:background="@drawable/bg_form"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:inputType="text"
            android:fontFamily="@font/opensans_medium"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/hint_email"
            android:textSize="12dp"
            android:drawableStart="@drawable/baseline_email_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#444"
            android:gravity="start"
            android:textSize="14dp"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/input_name"/>

        <com.yyogadev.growthyapplication.customview.MyEditText
            android:id="@+id/edt_name"
            android:background="@drawable/bg_form"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:fontFamily="@font/opensans_medium"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/hint_neme"
            android:textSize="12dp"
            android:drawableStart="@drawable/baseline_account_circle_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#444"
            android:gravity="start"
            android:textSize="14dp"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/input_password"/>

        <com.yyogadev.growthyapplication.customview.MyPasswordText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_form"
            android:drawableStart="@drawable/password"
            android:fontFamily="@font/opensans_medium"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="12dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.yyogadev.growthyapplication.customview.MyButton
            android:layout_marginTop="15dp"
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_daftar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:fontFamily="@font/opensans_medium"
            android:textColor="#444"
            android:text="@string/atau"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="0dp"
                app:cardCornerRadius="3dp"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@drawable/bg_footer">

                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daftar_google"
                        android:layout_toRightOf="@id/google"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/sudah_punya_akun"/>

            <TextView
                android:id="@+id/txt_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:clickable="true"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/text_login"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>